# garmin-treadmill-bridge

./: .gitignore  CLAUDE.md  README.md  build.sh
.github/workflows/: ci.yml  pages.yml
.pi-subagents/artifacts/: c1899445_reviewer_0_input.md  c1899445_reviewer_0_meta.json  c1899445_reviewer_0_output.md  c1899445_reviewer_0_transcript.jsonl
app/: .gitignore  README.md  pubspec.yaml
app/lib/: main.dart
app/test/: widget_test.dart
boards/xiao-c6/: CMakeLists.txt  sdkconfig.defaults
boards/xiao-nrf52840/: Makefile  ant_network_key.h.example  app_config.h  custom_board.h  ifit_poll.c  ifit_poll.h  last_device.c  last_device.h  machine_shim.c  main.c  platform_ant_sdm.c  platform_ant_sdm.h  platform_ble_central.c  platform_ble_central.h  platform_ble_ctrl_svc.c  platform_ble_ctrl_svc.h  xiao_nrf52840_s340.ld
components/bridge_core/: CMakeLists.txt  ant_sdm_encode.c  ant_sdm_encode.h  connect_policy.c  connect_policy.h  ctrl_dispatch.c  ctrl_dispatch.h  ctrl_frames.c  ctrl_frames.h  ctrl_svc.c  ctrl_svc.h  garmin_rsc.c  garmin_rsc.h  machine.c  machine.h  machine_ifit.c  machine_ifit.h  nus_ctrl.c  nus_ctrl.h  rsc_encode.c  serial_ctrl.c  workout_ctrl.c  workout_ctrl.h
docs/flasher/: index.html  manifest-heltec-v3.json  manifest-xiao-c6.json  mtp.js
garmin_ctrl_app/: manifest.xml
garmin_ctrl_app/resources/: resources.xml
garmin_ctrl_app/source/: BridgeBle.mc  CtrlApp.mc  DeviceMenuDelegate.mc  ScanView.mc  StatusDelegate.mc  StatusView.mc
garmin_data_field/: manifest.xml
test/: HARDWARE_TEST_PLAN.md
tools/: mtp_send_to_folder.c  serial_monitor.py
(+43 files in other folders)
